// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<OrderHistoryPage /> Renders correctly in various states renders empty orders 1`] = `
<section
  class="page__order-history"
>
  <h1>
    Order History
  </h1>
  <div>
    <p>
      Orders you place with localhost will appear here.
    </p>
  </div>
</section>
`;

exports[`<OrderHistoryPage /> Renders correctly in various states renders loading state 1`] = `
<section
  class="page__order-history"
>
  <h1>
    Order History
  </h1>
  <div>
    <div>
      <div
        class="d-flex justify-content-center align-items-center flex-column"
        style="height: 50vh;"
      >
        <div
          class="spinner-border text-primary"
          role="status"
        >
          <span
            class="sr-only"
          >
            Loading orders...
          </span>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`<OrderHistoryPage /> Renders correctly in various states renders orders table with pagination 1`] = `
<section
  class="page__order-history"
>
  <h1>
    Order History
  </h1>
  <div>
    <nav
      aria-label="pagination navigation"
      class="pagination-margin pagination-default"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        aria-relevant="text"
        class="sr-only"
      >
        Page 2, Current Page, of 10
      </div>
      <ul
        class="pagination"
      >
        <li
          class="page-item"
        >
          <button
            aria-label="Previous, Page 1"
            class="previous page-link btn btn-tertiary"
            type="button"
          >
            <span
              class="pgn__icon btn-icon-before"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            Previous
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            aria-label="Page 1"
            class="page-link btn btn-tertiary"
            type="button"
          >
            1
          </button>
        </li>
        <li
          class="page-item active"
        >
          <button
            aria-label="Page 2, Current Page"
            class="page-link btn btn-primary"
            type="button"
          >
            2
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            aria-label="Page 3"
            class="page-link btn btn-tertiary"
            type="button"
          >
            3
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            aria-label="Page 4"
            class="page-link btn btn-tertiary"
            type="button"
          >
            4
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            aria-label="Page 5"
            class="page-link btn btn-tertiary"
            type="button"
          >
            5
          </button>
        </li>
        <li
          class="page-item disabled"
        >
          <span
            class="btn page-link ellipsis"
          >
            ...
          </span>
        </li>
        <li
          class="page-item"
        >
          <button
            aria-label="Page 10"
            class="page-link btn btn-tertiary"
            type="button"
          >
            10
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            aria-label="Next, Page 3"
            class="previous page-link btn btn-tertiary"
            type="button"
          >
            Next
            <span
              class="pgn__icon btn-icon-after"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</section>
`;
